k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: mean-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:

      - name: frontend

        image: frontend:v1
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "300m"
