k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: mean-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb
        image: mongo:7
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 27017

        volumeMounts:
        - mountPath: /data/db
          name: mongo-storage

      volumes:
      - name: mongo-storage
        emptyDir: {}
