k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mean-app

spec:
  selector:
    app: mongodb

  ports:
  - port: 27017
    targetPort: 27017

  type: ClusterIP
